# gunk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  landing.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: draft.rs  lib.rs  model.rs  operation.rs  plan.rs  preview.rs  search.rs  selection.rs
crates/core/src/plan/: mod.rs  rebase.rs  tests.rs  validate.rs
crates/core/src/plan/snapshots/: gunk_core__plan__tests__all_three_plan_types_composite.snap  gunk_core__plan__tests__bulk_set_author.snap  gunk_core__plan__tests__bulk_set_message.snap  gunk_core__plan__tests__drop_multiple_commits.snap  gunk_core__plan__tests__drop_single_commit.snap  gunk_core__plan__tests__filter_repo_plus_rebase_composite.snap  gunk_core__plan__tests__fixup_adjacent.snap  gunk_core__plan__tests__fixup_non_adjacent_auto_reorder.snap  gunk_core__plan__tests__flatten_merge.snap  gunk_core__plan__tests__flatten_plus_rebase_composite.snap  gunk_core__plan__tests__independent_squash_groups.snap  gunk_core__plan__tests__remove_paths.snap  gunk_core__plan__tests__reorder_commits.snap  gunk_core__plan__tests__reword_plus_set_author_same_commit.snap  gunk_core__plan__tests__reword_single_commit.snap  gunk_core__plan__tests__root_commit_reword.snap  gunk_core__plan__tests__single_commit_reword.snap  gunk_core__plan__tests__squash_adjacent.snap  (+4 more)
crates/gitio/: Cargo.toml
crates/gitio/src/: execute.rs  git.rs  lib.rs
crates/gitio/tests/: execute_tests.rs  git_tests.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: fixture.rs
docs/: handoff.md  plan.md  problem_statement.md
docs/adrs/: 0001-shell-out-to-git-cli.md  0002-three-layer-architecture.md  0003-operations-as-data.md  0004-safety-model.md  0005-draft-mode.md  0006-git-filter-repo-optional.md  0007-merge-flatten-via-commit-tree.md  0008-cross-platform-editor-wiring.md  0009-ui-state-reducer-pattern.md  0010-tdd-with-deterministic-fixtures.md  0011-tech-stack.md  0012-lazy-load-commit-details.md  0013-dual-delimiter-git-output-protocol.md  0014-selection-state-in-core.md  0015-in-memory-linear-search.md  0016-plan-engine-validation-pipeline.md  0017-preview-projection-layer.md  0018-execution-engine-safety-protocol.md  0019-message-feeding-via-exec-lines.md  0020-filter-repo-file-removal.md  0021-merge-flatten-via-commit-tree.md  0022-large-history-responsiveness.md  0023-co-author-trailer-management.md  0024-oid-remap-across-composite-rewrites.md
docs/landing/: index.html  style.css
