[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Domain
thiserror = "2"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

# GUI
eframe = "0.31"
egui = "0.31"

# Testing
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
