[package]
name = "gunk-gitio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gunk-core = { path = "../core" }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
gunk-testkit = { path = "../testkit" }
tempfile = { workspace = true }
